--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,15 @@
 <!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <base href="/mu_projects_blog/" />
   <title>Magnificent Mendicant Mentoring Month</title>
   <meta name="author" content="Mendicant University">
   <meta name="description" content="Mendicant University Projects">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="assets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
-  <link href="assets/custom.css" media="screen, projection" rel="stylesheet" type="text/css">
-  <link href="atom.xml" rel="alternate" title="Magnificent Mendicant Mentoring Month" type="application/atom+xml">
+  <link href="/assets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+  <link href="/assets/custom.css" media="screen, projection" rel="stylesheet" type="text/css">
+  <link href="/atom.xml" rel="alternate" title="Magnificent Mendicant Mentoring Month" type="application/atom+xml">
   <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 </head>
@@ -21,27 +20,27 @@
 <body>
   <header role="banner">
     <hgroup>
-      <h1><a href="">Magnificent Mendicant Mentoring Month</a></h1>
+      <h1><a href="/">Magnificent Mendicant Mentoring Month</a></h1>
       <h2>Mendicant University projects</h2>
     </hgroup>
   </header>
   
   <nav role="navigation">
     <ul class="subscription" data-subscription="rss">
-      <li><a href="atom.xml" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
+      <li><a href="/atom.xml" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
     </ul>
     
     <form action="http://google.com/search" method="get">
       <fieldset role="search">
-        <input type="hidden" name="q" value="site:rmu.github.com/mu_projects_blog" />
+        <input type="hidden" name="q" value="site:rmu.github.com" />
         <input class="search" type="text" name="q" results="0" placeholder="Search"/>
       </fieldset>
     </form>
     
     <ul class="main-navigation">
-      <li><a href="">Home</a></li>
-      <li><a href="about.html">About MU</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about.html">About MU</a></li>
+      <li><a href="/projects.html">Projects</a></li>
     </ul>
   </nav>
   
@@ -58,7 +57,7 @@
           <h1>Recent Posts</h1>
           <ul id="recent_posts">
             {% for post in site.posts %}
-              <li class="post"><a href="/mu_projects_blog{{ post.url }}">{{ post.title }}</a></li>
+              <li class="post"><a href="{{ post.url }}">{{ post.title }}</a></li>
             {% endfor %}    
           </ul>
         </section>
