--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,17 @@
           <h1>Current Projects</h1>
           <ul id="recent_posts">
             <li class="post"><a href="/doc-week.html">MRI Documentation Week</a></li>
+	    <li><a href="/hackfest.html">For Great Justice!!! Hackfest</a></li>
           </ul>
         </section>
+	<section>
+	  <h1>Hackfest Projects</h1>
+	  <ul>
+	    {% for post in site.categories['hackfest'] %}
+	    <li><a href="{{ post.url}}">{{ post.title }}</a></li>
+	    {% endfor %}
+	  </ul>
+	</section>
       </aside>
     </div> <!-- content -->
   </div> <!-- main -->
