Minor text edits

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
           <h1>Current Projects</h1>
           <ul id="recent_posts">
             <li class="post"><a href="/doc-week.html">MRI Documentation Week</a></li>
-	    <li><a href="/hackfest.html">For Great Justice!!! Hackfest</a></li>
+	    <li><a href="/hackfest.html">Hackfest For Great Justice!</a></li>
           </ul>
         </section>
 	<section>
