--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
           </ul>
         </section>
 	<section>
-	  <h1>Hackfest Projects</h1>
+	  <h1>Hackfest Organizations</h1>
 	  <ul>
 	    {% for post in site.categories['hackfest'] %}
 	    <li><a href="{{ post.url}}">{{ post.title }}</a></li>
