add Past Project to sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,7 @@
         <section>
           <h1>Current Projects</h1>
           <ul id="recent_posts">
-            <li class="post"><a href="/doc-week.html">MRI Documentation Week</a></li>
-	    <li><a href="/hackfest.html">Hackfest For Great Justice!</a></li>
+            <li><a href="/hackfest.html">Hackfest For Great Justice!</a></li>
           </ul>
         </section>
 	<section>
@@ -56,6 +55,12 @@
 	    {% endfor %}
 	  </ul>
 	</section>
+        <section>
+          <h1>Past Projects</h1>
+          <ul id="recent_posts">
+            <li class="post"><a href="/doc-week.html">MRI Documentation Week</a></li>
+          </ul>
+        </section>
       </aside>
     </div> <!-- content -->
   </div> <!-- main -->
