Update Mendicant URL

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 
   <footer role="contentinfo">
     <p>
-      <a href="http://university.rubymendicant.com">A Mendicant University Project</a>
+      <a href="http://mendicantuniversity.org">A Mendicant University Project</a>
     </p>
   </footer>
 
